Fix conditional ripped file pattern parsing

Since 7b92455f2614 we match against substrings rather than at an offset,
so capturedStart() is not the offset we matched at.

BUG: 494653
(cherry picked from commit d8d9fb7b79e73710e298dc1d97b3ff3c53997b84)